--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,10 @@
-FROM node:latest
+FROM --platform=linux/amd64 node:latest
 EXPOSE 3000
 WORKDIR /frontend
 COPY package-lock.json package.json ./
+RUN apt update && apt install -y make
+RUN apt update && apt install -y bash
 RUN npm install --no-progress --ignore-optional
 RUN chmod -R 777 /home/node /root
-CMD npm run dev
+CMD make
+CMD make watch
